u[pdated tect to Noelle's Odin Recipes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Noelle's Odin Recipes</h1>
+
     <ul>
         <li><a href="pages/smashburgers.html" target="_blank" rel="noopener noreferrer">Smash Burgers</a></li>
         <li><a href="pages/chipotlechicken.html" target="_blank" rel="noopener noreferrer">Chipotle Chicken</a></li>
